--- a/front/src/pages/css/landing.module.css
+++ b/front/src/pages/css/landing.module.css
@@ -1,68 +1,32 @@
 .background{
-    background: linear-gradient(#000 50.1%, #FFF 50%);
-}
-
-.form{
     background-color: #FFF;
-    border-radius: 0 0 5rem 0;
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex-direction: column;
+    display: grid;
+    place-items: center;
+    height: 100vh;
 }
 
+@media (min-width: 768px) {
+    .form{
+        background-color: #FFF;
+        border-radius: 15px;
+        border: 2px solid #000;
+        box-shadow: 8px 10px #000;
+        padding: 30px 80px;
+    }
+}
 .loginField{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    border-bottom: 1px solid #AAA;
+    gap: 5px;
 }
 
-.input{
-    margin-top: 5px;
-    border: none;
-    padding: 8px 13px;
-}
-
-.passField{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    border-bottom: 1px solid #AAA;
-    margin-top: 10px;
-}
-
-.buttomField{
+.divLink {
+    display: block;
     margin-top: 15px;
 }
 
-.buttom{
-    background-color: #FFF;
-    border: 2px solid #000;
-    color: #000;
-    border-radius: 5rem;
-    padding: 10px 15px;
-    margin-bottom: 20px;
-}
-
-.linkField{
-    background-color: #000;
-    border-radius: 5rem 0 0 0;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-}
-
-.divLink{
-    margin-top: 20px;
-}
-
-.link{
-    color: #FFF;
+.link {
     text-decoration-line: underline;
 }
-
-.link:hover{
+.link:hover {
     cursor: pointer;
+    background-color: #F9F9F9;
 }
